# Entropy

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  LICENSE.txt  Launch Screen.storyboard  UI.swift  config.h  config.h.in  readme.md  test.swift
.github/workflows/: cmake-macos-platform-clang.yml  cmake-multi-platform.yml  cmake-windows-platform-gcc.yml  cmake-windows-platform-msvc.yml
android/: settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/cpp/: CMakeLists.txt  main.cpp  shader.cpp  shader.h
build-WIN/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  Symbios.sln  Symbios.vcxproj  Symbios.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
build-iOS/: CMakeCache.txt  cmake_install.cmake
build-iOS/CMakeScripts/: ReRunCMake.make
build-iOS/Symbios.xcodeproj/: project.pbxproj
cmake/: compiler_flags.cmake  external_dependencies.cmake  ios.cmake  linking.cmake  platform.cmake
docs/html/: annotated.html  annotated_dup.js  application_8hpp_source.html  buffer_8hpp.html  buffer_8hpp_source.html  class_symbios_1_1_core_1_1_context-members.html  class_symbios_1_1_core_1_1_context.html  class_symbios_1_1_core_1_1_context.js  class_symbios_1_1_graphics_1_1_buffers_1_1_buffer-members.html  class_symbios_1_1_graphics_1_1_buffers_1_1_buffer.html  class_symbios_1_1_graphics_1_1_command_buffers_1_1_command_buffer-members.html  class_symbios_1_1_graphics_1_1_command_buffers_1_1_command_buffer.html  class_symbios_1_1_graphics_1_1_command_buffers_1_1_command_buffer.js  class_symbios_1_1_graphics_1_1_pipelines_1_1_pipeline-members.html  class_symbios_1_1_graphics_1_1_pipelines_1_1_pipeline.html  class_symbios_1_1_graphics_1_1_pipelines_1_1_pipeline.js  class_symbios_1_1_graphics_1_1_render_passes_1_1_render_pass-members.html  class_symbios_1_1_graphics_1_1_render_passes_1_1_render_pass.html  class_symbios_1_1_graphics_1_1_render_passes_1_1_render_pass.js  class_symbios_1_1_graphics_1_1_renderers_1_1_renderer-members.html  class_symbios_1_1_graphics_1_1_renderers_1_1_renderer.html  class_symbios_1_1_graphics_1_1_renderers_1_1_renderer.js  class_symbios_1_1_graphics_1_1_shaders_1_1_shader-members.html  class_symbios_1_1_graphics_1_1_shaders_1_1_shader.html  class_symbios_1_1_graphics_1_1_shaders_1_1_shader.js  classes.html  commandbuffer_8hpp.html  commandbuffer_8hpp_source.html  config_8hpp_source.html  context_8hpp.html  context_8hpp_source.html  dir_057a03bd2983cebfd86b07dde9e1539d.html  dir_057a03bd2983cebfd86b07dde9e1539d.js  dir_164c9ad1fde7450c870bb733a83e4b86.html  dir_164c9ad1fde7450c870bb733a83e4b86.js  dir_475521bcc5d72920903fa03272aee527.html  dir_475521bcc5d72920903fa03272aee527.js  dir_4ba69f14123b51abb96d2aac6e01a768.html  dir_4ba69f14123b51abb96d2aac6e01a768.js  dir_503d9e469b557f3ed6a0d08ad6f7ac52.html  (+39 more)
docs/latex/: annotated.tex  application_8hpp_source.tex  buffer_8hpp.tex  buffer_8hpp_source.tex  class_symbios_1_1_core_1_1_context.tex  class_symbios_1_1_graphics_1_1_buffers_1_1_buffer.tex  class_symbios_1_1_graphics_1_1_command_buffers_1_1_command_buffer.tex  class_symbios_1_1_graphics_1_1_pipelines_1_1_pipeline.tex  class_symbios_1_1_graphics_1_1_render_passes_1_1_render_pass.tex  class_symbios_1_1_graphics_1_1_renderers_1_1_renderer.tex  class_symbios_1_1_graphics_1_1_shaders_1_1_shader.tex  commandbuffer_8hpp.tex  commandbuffer_8hpp_source.tex  config_8hpp_source.tex  context_8hpp.tex  context_8hpp_source.tex  files.tex  filesystem_8hpp_source.tex  pipeline_8hpp.tex  pipeline_8hpp_source.tex  refman.tex  renderer_8hpp_source.tex  renderpass_8cpp.tex  renderpass_8hpp_source.tex  shader_8hpp.tex  shader_8hpp_source.tex  struct_symbios_1_1_core_1_1_context_1_1_queue_family_indices.tex  struct_symbios_1_1_core_1_1_context_1_1_swap_chain_support_details.tex  struct_vertex.tex  vertex_8hpp_source.tex
iOS/: CMakeCache.txt  cmake_install.cmake
iOS/CMakeScripts/: ReRunCMake.make
iOS/Symbios.xcodeproj/: project.pbxproj
include/: config 2.hpp  config.hpp  entropy.hpp
ios-specific/: UI.swift  lua-freetype-fix-ios.txt
lua/entropy/: easing.lua  primitives.lua
lua/libraries/: luvent.lua
macOS/: CMakeCache.txt  Makefile  Symbios  cmake_install.cmake
resources/models/: 2.gltf  3.gltf  Untitled_Scan_17_03_15.gltf  Untitled_Scan_19_04_23.gltf  Untitled_Scan_19_16_20.gltf  gren_new_1_16_50_44.gltf  level1.gltf  vert.spv
resources/scripts/: leaf.lua  main.lua  test.chai  test.lua  untitled.chai
scripts/: build-shaders-macOS.sh  build-shaders-macos.sh  build-shaders-windows.bat  compile_shaders.sh  shader-combiner.py
shaders/: poc.frag  poc.vert  static.frag  static.vert  ui.vert
shaders/_backup/: 2d.vert  _bkup.frag  _bkup.vert  cubemap.vert  skinned.frag  skinned.vert
shaders/basic/: 2d.frag  2d.vert  2d_frag.spv  2d_vert.spv  basic.frag  basic.vert  cubemap.frag  cubemap_vert.spv  frag.spv  gizmo.frag  gizmo.vert  gizmo_frag.spv  gizmo_vert.spv  skinned_frag.spv  ui_vert.spv  (+2 more)
src/: config.h  main.cpp  main.mm  symbios.hpp
svampjakt2/: main.cpp
tests/: .gitignore  CMakeLists.txt
tests/unit/animation/easing/: easing_test.cpp
tests/unit/core/context/: context.test.cpp
tests/unit/graphics/buffers/: vertexbuffer_test.cpp
tests/unit/graphics/devices/: logical_device_test.cpp  physical_device_test.cpp
tests/unit/graphics/instances/: vk_instance_test.cpp
tests/unit/graphics/pipelines/: pipeline.test.cpp  pipeline_test.cpp
tests/unit/graphics/surfaces/: surface_test.cpp
tests/unit/graphics/validationlayers/: validationlayer_test.cpp
tests/unit/utils/: setup.cpp  setup.hpp
win/: ALL_BUILD.vcxproj  CMakeCache.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  Symbios.sln  Symbios.vcxproj  Symbios.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
windows/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  Symbios.sln  Symbios.vcxproj  Symbios.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
(+2205 files in other folders)
